# libnyoravim

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: test.yml
include/nyoravim/: base64.h  list.h  map.h  mem.h  util.h
src/: base64.c  list.c  map.c  mem.c  util.c
tests/: CMakeLists.txt  test_b64.c  test_list.c  test_map.c  test_util.c
